Test page description and ReadMe updated

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>Fixed position</h1>
-    <p>Test page that uses the a function to fixed position of element in the page when you scroll. This element has a link to go to the top of the page.</p>
+    <p>Test page that uses a few functions to fixed position of element in the page when you scroll. This element has a link to go to the top of the page.</p>
   </header>
   <section>
     <h2>Body of the page</h2>
